--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_hooks: ^0.21.2
+  formz: ^0.8.0
   freezed: ^3.0.6
   freezed_annotation: ^3.0.0
   get_it: ^8.0.3
@@ -22,8 +23,10 @@ dependencies:
   injectable_generator: ^2.7.0
   json_annotation: ^4.9.0
   logger: ^2.6.0
+  pretty_dio_logger: ^1.4.0
   retrofit: ^4.4.2
   retrofit_generator: ^9.2.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
