--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   flutter_dotenv: ^5.2.1
   flutter_hooks: ^0.21.2
+  flutter_svg: ^2.2.0
   formz: ^0.8.0
   freezed: ^3.0.6
   freezed_annotation: ^3.0.0
@@ -43,3 +44,16 @@ flutter:
   assets:
     - .env
     - assets/images/
+    - assets/images/illust/
+    - assets/images/logo/
+
+  fonts:
+    - family: Pretendard
+      fonts:
+        - asset: assets/fonts/PretendardVariable.ttf
+    - family: Jalnan
+      fonts:
+        - asset: assets/fonts/Jalnan2TTF.ttf
+    - family: JalnanGothic
+      fonts:
+        - asset: assets/fonts/JalnanGothicTTF.ttf
