--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,12 @@ app.*.map.json
 /android/app/release
 
 *.env
+
+
+# Firebase related
+/firebase/
+google-services.json
+GoogleService-Info.plist
+firebase_options.dart
+firebase.json
+
