--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,11 @@ environment:
 
 dependencies:
   bloc_concurrency: ^0.3.0
+  cloud_firestore: ^5.6.10
   dio: ^5.8.0+1
   equatable: ^2.0.7
+  firebase_auth: ^5.6.1
+  firebase_core: ^3.15.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
