--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   freezed_annotation: ^3.0.0
   get_it: ^8.0.3
   go_router: ^15.1.3
+  google_sign_in: ^7.1.0
   injectable: ^2.5.0
   injectable_generator: ^2.7.0
   json_annotation: ^4.9.0
