--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,8 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: build runner
+        run: flutter pub run build_runner build --delete-conflicting-outputs
+
       - name: Run tests
         run: flutter test
